--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -2,9 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 100%;
+  width: 100vw;
   padding: 0.3rem 6rem 0 1rem;
   gap: 1rem;
+}
+.light {
+  color: #000;
+}
+.dark {
+  color: #fff;
 }
 .profile_name {
   display: flex;
@@ -13,7 +19,6 @@
   flex-direction: column;
 }
 .profile_name h4 {
-  color: #000;
   font-family: 'Inter';
   font-weight: 400;
 }
@@ -23,7 +28,6 @@
   justify-content: center;
   width: 4rem;
   height: 4rem;
-  background: #000;
   border-radius: 1.5rem;
   -webkit-border-radius: 1.5rem;
   -moz-border-radius: 1.5rem;
@@ -35,6 +39,10 @@
   -ms-transition: all 0.5s ease-in;
   -o-transition: all 0.5s ease-in;
   padding: 2px 1px;
+}
+.profile_img a {
+  width: 100%;
+  height: 100%;
 }
 .profile_img img {
   width: 99%;
