--- a/src/components/LastPlayed/style.module.css
+++ b/src/components/LastPlayed/style.module.css
@@ -6,15 +6,14 @@
   overflow: hidden;
 }
 .last_played h3 {
-  color: #000;
   font-family: 'Gilroy';
   font-weight: 800;
 }
 .last_played_children {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  overflow-y: scroll;
+  gap: 1.5rem;
+  overflow-y: auto;
 }
 .last_played_children::-webkit-scrollbar {
   width: 0;
