--- a/src/components/LastPlayedDiv/style.module.css
+++ b/src/components/LastPlayedDiv/style.module.css
@@ -2,14 +2,19 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  border-radius: 27px 25px 25px 35px;
+  border-radius: 33px 25px 25px 35px;
   padding-right: 0.5rem;
-  background: #fbfbfb;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  -webkit-border-radius: 27px 25px 25px 35px;
-  -moz-border-radius: 27px 25px 25px 35px;
-  -ms-border-radius: 27px 25px 25px 35px;
-  -o-border-radius: 27px 25px 25px 35px;
+  -webkit-border-radius: 33px 25px 25px 35px;
+  -moz-border-radius: 33px 25px 25px 35px;
+  -ms-border-radius: 33px 25px 25px 35px;
+  -o-border-radius: 33px 25px 25px 35px;
+}
+.div_light {
+  background: #fbfbfb;
+}
+.div_dark {
+  background: #515151;
 }
 .div img {
   width: 70px;
@@ -27,6 +32,10 @@
     0px 0px 88.19999694824219px 0px #17d924,
     0px 0px 151.1999969482422px 0px #17d924,
     0px 0px 264.6000061035156px 0px #17d924;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .blue:hover {
   box-shadow: 0px 0px 6.300000190734863px 0px #1360dd,
