--- a/src/components/NewGames/style.module.css
+++ b/src/components/NewGames/style.module.css
@@ -1,10 +1,15 @@
 .new_games {
   width: 100%;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 }
-.new_games h3 {
+.light {
   color: #000;
+}
+.dark {
+  color: #fff;
+}
+.new_games h3 {
   font-family: 'Gilroy';
   font-weight: 800;
   text-transform: uppercase;
@@ -13,17 +18,17 @@
   display: flex;
   gap: 2rem;
   width: 135%;
-  height: 220px;
+  height: 250px;
   padding-top: 1rem;
 }
 .new_games::-webkit-scrollbar {
   width: 2px;
-  height: 5px;
+  height: 4px;
 }
 
-.new_games::-webkit-scrollbar-track {
-  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-}
+/* .new_games::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+} */
 
 .new_games::-webkit-scrollbar-thumb {
   background-color: #c1c1c1;
