--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -17,3 +17,13 @@
   height: 100%;
   object-fit: contain;
 }
+.logout_icon {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+.logout_icon svg {
+  cursor: pointer;
+}
