--- a/src/components/Typography/style.module.css
+++ b/src/components/Typography/style.module.css
@@ -5,13 +5,13 @@
   font-size: 42px;
 }
 .t__h3 {
-  font-size: 35px;
-}
-.t__h4 {
   font-size: 25px;
 }
+.t__h4 {
+  font-size: 23px;
+}
 .t__h5 {
-  font-size: 22px;
+  font-size: 18px;
 }
 .t__h6 {
   font-size: 16px;
@@ -27,4 +27,10 @@
 }
 .t__caption {
   font-size: 12px;
+}
+.light {
+  color: #000;
+}
+.dark {
+  color: #fff;
 }
