--- a/src/pages/GamesPage/style.module.css
+++ b/src/pages/GamesPage/style.module.css
@@ -2,12 +2,16 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  border-radius: 1.5rem;
-  -webkit-border-radius: 1.5rem;
-  -moz-border-radius: 1.5rem;
-  -ms-border-radius: 1.5rem;
-  -o-border-radius: 1.5rem;
 }
+.light {
+  background: #fff;
+  color: #000;
+}
+.light {
+  background: #242424;
+  color: #fff;
+}
+
 .line {
   display: flex;
   align-items: center;
@@ -34,4 +38,5 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  color: transparent;
 }
