--- a/src/components/Login/LeftDiv/style.module.css
+++ b/src/components/Login/LeftDiv/style.module.css
@@ -1,9 +1,9 @@
 .left__div {
-  width: 100%;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 1rem;
 }
 .left__div__text h2 {
@@ -80,13 +80,13 @@ input::placeholder {
 .form__input__password img {
   position: absolute;
   right: 1rem;
-  top: 50%;
+  top: 45%;
   cursor: pointer;
 }
 .form__input__password svg {
   position: absolute;
   right: 1rem;
-  top: 50%;
+  top: 45%;
   cursor: pointer;
 }
 
