--- a/src/pages/UsersPage/style.module.css
+++ b/src/pages/UsersPage/style.module.css
@@ -17,8 +17,13 @@
 }
 .search input {
   flex: 3;
+  padding: 0.5rem;
+  outline: none;
+  border: 1px solid #ddd;
 }
 .search select {
+  outline: none;
+  border: 1px solid #ddd;
   outline: none;
   flex: 1;
 }
